# rubixCube

./: CMakeLists.txt  README.md  data.h  main.cpp  record.h  shader.h  util.h
shader/: core.frag  core.vert
